--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,8 @@ body {
     gap: 50px;
     padding: 75px 10px 150px;
     background-color: #9187b9;
+    position: relative;
+    z-index: -5;
 }
 .banner h1 {
     color: #fff;
@@ -38,6 +40,7 @@ body {
     margin-top: -75px;
     margin-bottom: 50px;
     padding: 15px 20px;
+    z-index: 5;
 }
 
 .banner-box .btn {
@@ -68,6 +71,11 @@ body {
     display: flex;
     flex-wrap: wrap;
 }
+.dashboard-timer .timer{
+    position: absolute;
+    right: 0;
+    top: 0;
+}
 
 
 
@@ -89,8 +97,23 @@ body {
     display: flex;
     gap: 10px;
 }
+.completed {
+    background-color:#898989;
+    opacity: 50%;
+}
 
 /****************** Question View ********************/
+.question-cat {
+    display: flex;
+    justify-content: space-between;
+}
+.timer {
+    background: transparent;
+    color:#000;
+    padding: 15px;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
 .question-card h4{
     color: orange;
     margin: 10px;
@@ -136,4 +159,49 @@ body {
     width: 100px;
     padding: 10px 20px;
     margin: 20px 10px 40px;
+}
+
+
+/************* End Quiz **************/
+.finish-quiz {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 80vh;
+}
+.end-card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #fff;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.end-card h3, .end-card p {
+    margin: 15px 10px;
+    font-size: 1.5rem;
+}
+
+.end-card h3 span {
+    color: #2cbc63;
+}
+.end-card p span {
+    font-size: 4rem;
+    font-weight: 700;
+    margin: 0 10px;
+}
+.return-btn {
+    padding: 10px;
+    margin: 15px;
+    background-color: #9187b9;
+    font-size: 1.7rem;
+    color: #fff;
+    border-radius: 7px;
+}
+.return-btn:hover {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    cursor: pointer;
 }
