--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,20 @@ body {
 
 /* Home Page */
 .navbar {
-    background-color: #9187b9;
+    background-color: #8974dd;
     font-weight: 700;
+    width: 100% !important;
     color: #fff !important;
 }
-.navbar .container a{
+.navbar .nav-container a{
     color: #fff !important;
+}
+.navbar .nav-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin: 0;
+    padding: 5px 15px;
 }
 .banner {
     display: flex;
@@ -22,7 +30,7 @@ body {
     justify-content: center;
     gap: 50px;
     padding: 75px 10px 150px;
-    background-color: #9187b9;
+    background-color: #8974dd;
     position: relative;
     z-index: -5;
 }
@@ -44,7 +52,7 @@ body {
 }
 
 .banner-box .btn {
-    background-color: #9187b9;
+    background-color: #8974dd;
     border-radius: 0;
     margin: 3px;
 }
@@ -62,7 +70,12 @@ body {
 }
 .banner-box h4, .banner-box p {
     text-align: center;
-    margin: 15px 2px;
+    margin: 5px 2px;
+}
+.banner-box h3 {
+    text-align: center;
+    margin: 5px 2px;
+    color: #2cbc63;
 }
 .categories-title {
     text-align: center;
@@ -74,7 +87,13 @@ body {
 .dashboard-timer .timer{
     position: absolute;
     right: 0;
+    top: 0; 
+}
+.dashboard-timer .timer-home{
+    position: absolute;
+    right: 0;
     top: 0;
+    color: white
 }
 @media only screen and (max-width: 600px) {
     .categories {
@@ -84,6 +103,20 @@ body {
     }
     .banner-box {
         width: 80%;
+    }
+    .banner-box h4, .banner-box p {
+        margin: 5px 2px;
+    }
+}
+@media only screen and (max-width: 900px) {
+    .categories {
+        display: flex;
+    }
+    .banner-box {
+        width: 80%;
+    }
+    .banner-box h4, .banner-box p {
+        margin: 5px 2px;
     }
 }
 
@@ -102,7 +135,6 @@ body {
     padding: 20px 100px 20px 20px;
     border-radius: 8px;
     margin: 20px;
-    /* pointer-events: none; */
 }
 .category-sub {
     display: flex;
@@ -111,10 +143,18 @@ body {
 .completed {
     background-color:#898989;
     opacity: 50%;
+    pointer-events: none;
 }
 @media only screen and (max-width: 600px) {
     .category {
         width: 90%;
+        padding: 20px;
+    }
+}
+@media only screen and (max-width: 900px) {
+    .category {
+        width: 45%;
+        padding: 20px;
     }
 }
 
@@ -124,6 +164,13 @@ body {
     justify-content: space-between;
 }
 .timer {
+    background: transparent;
+    color:#000;
+    padding: 15px;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+.timer-home {
     background: transparent;
     color:#000;
     padding: 15px;
@@ -146,7 +193,7 @@ body {
     font-weight: 900;
 }
 .selected {
-    background-color: #9187b9 !important;
+    background-color: #8974dd !important;
 }
 .options {
     display: flex;
@@ -157,7 +204,7 @@ body {
 .option {
     display: flex;
     gap: 40px;
-    padding: 35px;
+    padding: 20px;
     margin: 12px 2px;
     width: 60%;
     border-radius: 10px;
@@ -169,12 +216,13 @@ body {
     justify-content: space-between;
 }
 .call-to-action button {
-    background-color: #9187b9;
+    background-color: #8974dd;
     border-radius: 5px;
     border: none;
-    width: 100px;
+    width: fit-content;
     padding: 10px 20px;
     margin: 20px 10px 40px;
+    color: #f7f7f7;
 }
 
 
@@ -184,7 +232,6 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    height: 80vh;
 }
 .end-card {
     display: flex;
@@ -192,12 +239,14 @@ body {
     justify-content: center;
     flex-direction: column;
     background-color: #fff;
+    margin-top: 15px;
     padding: 40px;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    z-index: 10;
 }
 .end-card h3, .end-card p {
-    margin: 15px 10px;
+    margin: 5px 10px;
     font-size: 1.5rem;
 }
 
@@ -205,14 +254,16 @@ body {
     color: #2cbc63;
 }
 .end-card p span {
-    font-size: 4rem;
+    font-size: 2.5rem;
     font-weight: 700;
-    margin: 0 10px;
+    margin: 0 5px;
+    margin-bottom: -10px;
+    padding: 0;
 }
 .return-btn {
     padding: 10px;
     margin: 15px;
-    background-color: #9187b9;
+    background-color: #8974dd;
     font-size: 1.7rem;
     color: #fff;
     border-radius: 7px;
@@ -220,4 +271,23 @@ body {
 .return-btn:hover {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     cursor: pointer;
+}
+.final-scores {
+    display: flex;
+    flex-direction: column;
+    width: 10rem;
+    margin: 15px 10px;
+    font-weight: 700;
+}
+.score {
+    display: flex;
+    justify-content: space-between;
+    margin: 5px 5px;
+}
+
+@media only screen and (max-width: 600px) {
+    .end-card {
+        width: 70%;
+        text-align: center;
+    }
 }
